<?xml version="1.0"?>
<package format="2">
  <name>square_moving</name>
  <version>0.0.0</version>
  <description>Turtle's moving in a square</description>
  <maintainer email="nadelyaev2002@gmail.com">dub2</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
</package>
